Fix crash due to not properly cleaning up peers and everything related when switching to superseeding mode.

BUG: 261529